[gd_scene load_steps=59 format=3 uid="uid://cspp4uo4ldpjc"]

[ext_resource type="Script" path="res://Enemy/Civilian/Coward/Coward.gd" id="1_04xq1"]
[ext_resource type="Texture2D" uid="uid://cr747l2e6gfe4" path="res://Enemy/Civilian/CivilianSprite/Civil_Shiver.png" id="2_0onms"]
[ext_resource type="PackedScene" uid="uid://cmxifb78w74h2" path="res://Blood Orb/Orb.tscn" id="2_grp1s"]
[ext_resource type="Texture2D" uid="uid://dke5j341yv0j7" path="res://Enemy/Civilian/CivilianSprite/Civil_Dead.png" id="2_naktn"]
[ext_resource type="Texture2D" uid="uid://cr7ua0nkj086t" path="res://Enemy/Civilian/CivilianSprite/Civil_Idle.png" id="3_kc5ah"]
[ext_resource type="Texture2D" uid="uid://d3tsisyto4g8" path="res://Enemy/Civilian/CivilianSprite/Civil_Run.png" id="4_od7sq"]
[ext_resource type="Script" path="res://Enemy/Civilian/Coward/MoveSensor.gd" id="5_1gtb8"]
[ext_resource type="Script" path="res://Enemy/Civilian/Coward/PlayerDetectSensor.gd" id="6_bbkbv"]
[ext_resource type="Script" path="res://Enemy/Civilian/Coward/AlertTimer.gd" id="7_nq47i"]
[ext_resource type="Texture2D" uid="uid://caa3ho5vukg4" path="res://Emote/Exclamation.png" id="8_nec4h"]
[ext_resource type="Script" path="res://Enemy/Civilian/Coward/EnemyDetectSensor.gd" id="9_jw4q7"]
[ext_resource type="Texture2D" uid="uid://bssx0pl4lnrx8" path="res://Emote/Question.png" id="9_k45mb"]
[ext_resource type="Script" path="res://Enemy/Civilian/Coward/EmoteTimer.gd" id="10_fhga6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3b3ri"]
atlas = ExtResource("2_naktn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpbdk"]
atlas = ExtResource("2_naktn")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1u5x1"]
atlas = ExtResource("2_naktn")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrs1y"]
atlas = ExtResource("2_naktn")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfd7j"]
atlas = ExtResource("2_naktn")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7cym"]
atlas = ExtResource("2_naktn")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ypqi"]
atlas = ExtResource("2_naktn")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xndje"]
atlas = ExtResource("2_naktn")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_asn5a"]
atlas = ExtResource("2_naktn")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_usid0"]
atlas = ExtResource("2_naktn")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5nid"]
atlas = ExtResource("2_naktn")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8gmy"]
atlas = ExtResource("3_kc5ah")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgiss"]
atlas = ExtResource("3_kc5ah")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbf5i"]
atlas = ExtResource("3_kc5ah")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_beo73"]
atlas = ExtResource("3_kc5ah")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gmy1"]
atlas = ExtResource("4_od7sq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_58dbe"]
atlas = ExtResource("4_od7sq")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8pqr"]
atlas = ExtResource("4_od7sq")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hj3s1"]
atlas = ExtResource("4_od7sq")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kd78o"]
atlas = ExtResource("4_od7sq")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uh3yr"]
atlas = ExtResource("4_od7sq")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gok0e"]
atlas = ExtResource("4_od7sq")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fnad"]
atlas = ExtResource("4_od7sq")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ynan"]
atlas = ExtResource("4_od7sq")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkk3q"]
atlas = ExtResource("4_od7sq")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4ghq"]
atlas = ExtResource("2_0onms")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v87t6"]
atlas = ExtResource("2_0onms")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8kwd"]
atlas = ExtResource("2_0onms")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_by8my"]
atlas = ExtResource("2_0onms")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_nvfuq"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.2,
"texture": SubResource("AtlasTexture_3b3ri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpbdk")
}, {
"duration": 1.2,
"texture": SubResource("AtlasTexture_1u5x1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrs1y")
}, {
"duration": 1.4,
"texture": SubResource("AtlasTexture_kfd7j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7cym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ypqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xndje")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asn5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usid0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5nid")
}],
"loop": false,
"name": &"Dead",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8gmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgiss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbf5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_beo73")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gmy1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58dbe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8pqr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hj3s1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kd78o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uh3yr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gok0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fnad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ynan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkk3q")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4ghq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v87t6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8kwd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_by8my")
}],
"loop": true,
"name": &"Stop",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0galp"]
size = Vector2(17.3913, 11.8243)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ve7jr"]
size = Vector2(22.4999, 14.9194)

[sub_resource type="AtlasTexture" id="AtlasTexture_5yid0"]
atlas = ExtResource("8_nec4h")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_723kt"]
atlas = ExtResource("8_nec4h")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3e3gs"]
atlas = ExtResource("8_nec4h")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bur3x"]
atlas = ExtResource("8_nec4h")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsy00"]
atlas = ExtResource("8_nec4h")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rlrx"]
atlas = ExtResource("8_nec4h")
region = Rect2(80, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3321"]
atlas = ExtResource("9_k45mb")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rx8iw"]
atlas = ExtResource("9_k45mb")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wb3v6"]
atlas = ExtResource("9_k45mb")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mat7j"]
atlas = ExtResource("9_k45mb")
region = Rect2(48, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_am7b3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yid0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_723kt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3e3gs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bur3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsy00")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rlrx")
}],
"loop": true,
"name": &"Find",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3321")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rx8iw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wb3v6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mat7j")
}],
"loop": true,
"name": &"Lost",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_0sltc"]
offsets = PackedFloat32Array(0, 0.681818)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_gfmvd"]
gradient = SubResource("Gradient_0sltc")
width = 128
height = 128
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Coward" type="CharacterBody2D"]
scale = Vector2(2, 2)
collision_layer = 16
collision_mask = 6
script = ExtResource("1_04xq1")
Orb = ExtResource("2_grp1s")

[node name="CowardSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_nvfuq")
animation = &"Idle"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -8.75001)
scale = Vector2(0.920001, 1.48)
shape = SubResource("RectangleShape2D_0galp")

[node name="Sensor" type="Node2D" parent="."]
scale = Vector2(0.5, 0.5)

[node name="MoveSensor" type="RayCast2D" parent="Sensor"]
position = Vector2(20, -50)
scale = Vector2(2, 1.04)
collision_mask = 6
script = ExtResource("5_1gtb8")

[node name="PlayerDetectSensor" type="RayCast2D" parent="Sensor"]
position = Vector2(0, -8)
scale = Vector2(2, 2)
target_position = Vector2(45, 0)
hit_from_inside = true
script = ExtResource("6_bbkbv")

[node name="EnemyDetectSensor" type="RayCast2D" parent="Sensor"]
position = Vector2(0, -8)
scale = Vector2(2, 2)
target_position = Vector2(45, 0)
collision_mask = 16
script = ExtResource("9_jw4q7")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(1.00001, -9.25)
scale = Vector2(0.800002, 1.24)
shape = SubResource("RectangleShape2D_ve7jr")

[node name="AlertTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
script = ExtResource("7_nq47i")

[node name="Emote" type="Node2D" parent="."]
scale = Vector2(0.5, 0.5)

[node name="EmoteAnimation" type="AnimatedSprite2D" parent="Emote"]
visible = false
position = Vector2(0, -72)
sprite_frames = SubResource("SpriteFrames_am7b3")

[node name="EmoteTimer" type="Timer" parent="Emote"]
wait_time = 3.0
one_shot = true
script = ExtResource("10_fhga6")

[node name="Torch" type="PointLight2D" parent="."]
position = Vector2(0.5, -15.5)
color = Color(0.980392, 0.686275, 0.266667, 1)
shadow_enabled = true
shadow_item_cull_mask = 2
texture = SubResource("GradientTexture2D_gfmvd")

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="AlertTimer" to="AlertTimer" method="_on_timeout"]
[connection signal="timeout" from="Emote/EmoteTimer" to="Emote/EmoteTimer" method="_on_timeout"]
